start style back of card. Add props and type to recipecardback. fix img overflow on front of card

--- a/src/features/RecipeCard/components/RecipeCardFront/RecipeCardFront.module.css
+++ b/src/features/RecipeCard/components/RecipeCardFront/RecipeCardFront.module.css
@@ -49,6 +49,13 @@
 
 .recipe_card_front__img {
   border-top: var(--border-500-c1);
+  contain: size;
+}
+
+.recipe_card_front__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .recipe_card_front__ingredients {
